# nibblerun

./: CLAUDE.md  Cargo.toml  Makefile  README.md  day.nbl
.claude/: settings.local.json
benches/: benchmarks.rs
docs/: appendable-format.md
examples/: measure_memory.rs
fuzz/: Cargo.toml
fuzz/.claude/: settings.local.json
fuzz/fuzz_targets/: fuzz_averaging.rs  fuzz_decode.rs  fuzz_decode_frozen.rs  fuzz_frozen_roundtrip.rs  fuzz_gaps.rs  fuzz_idempotent.rs  fuzz_keep_last.rs  fuzz_lossless.rs  fuzz_lossy_bounds.rs  fuzz_roundtrip.rs  fuzz_single_reading.rs
src/: appendable.rs  constants.rs  decoder.rs  encoder.rs  error.rs  lib.rs  reading.rs  value.rs
src/tests/: proptests.rs  unit.rs
test_data/: all_encodings.csv
