[package]
name = "nibblerun"
version = "0.1.3"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
cap = "0.1.2"
ahash = "0.8.12"

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"

[[bin]]
name = "nbl-gen"
path = "src/bin/nbl_gen.rs"

[[bin]]
name = "nbl-viz"
path = "src/bin/nbl_viz.rs"

[[bin]]
name = "nbl-analyze"
path = "src/bin/nbl_analyze.rs"

[[bench]]
name = "benchmarks"
harness = false
