[package]
name = "nibblerun"
version = "0.1.5"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
cap = "0.1.2"
ahash = "0.8.12"
tsz = "0.1.4"
tikv-jemallocator = { version = "0.6.1", features = ["stats"] }
tikv-jemalloc-ctl = { version = "0.6.1", features = ["stats"] }
rustc-hash = "2.1.1"
lz4_flex = "0.11"
zstd = "0.13"
pco = "0.3"
snap = "1"
brotli = "7"
flate2 = "1"

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"

[[bin]]
name = "nbl-gen"
path = "src/bin/nbl_gen.rs"

[[bin]]
name = "nbl-viz"
path = "src/bin/nbl_viz.rs"

[[bin]]
name = "nbl-analyze"
path = "src/bin/nbl_analyze.rs"

[[bin]]
name = "nbl-bench"
path = "src/bin/nbl_bench.rs"

[[bin]]
name = "nbl-bench-others"
path = "src/bin/nbl_bench_others.rs"

[[bench]]
name = "benchmarks"
harness = false
