[package]
name = "nibblerun-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nibblerun]
path = ".."

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_idempotent"
path = "fuzz_targets/fuzz_idempotent.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_keep_last"
path = "fuzz_targets/fuzz_keep_last.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_gaps"
path = "fuzz_targets/fuzz_gaps.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lossless"
path = "fuzz_targets/fuzz_lossless.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_frozen_roundtrip"
path = "fuzz_targets/fuzz_frozen_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_frozen"
path = "fuzz_targets/fuzz_decode_frozen.rs"
test = false
doc = false
bench = false
